--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <base href="/"/>
 </head>
 <body>
+    <h1>Simple Address Book</h1>
+    <h3>To add a contact to the book, enter name and address below:</h3>
     <form class="form">
         <label>
           Name:
@@ -22,7 +25,7 @@
         <button type="submit">Create Contact</button>
       </form>
       <button class="show-contacts-btn">Show Registered Contacts</button>
-      <main></main>
+      <footer></footer>
     <script src="index.js"></script>
 </body>
 </html>
