adds target blank for github link

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
     </form>
     <button class="show-contacts-btn">Show Registered Contacts</button>
     <button class="options-button">Other Options</button>
-    <div class="bottom">By: Tim Hansson Meng<a href="https://github.com/Slipzter">
+    <div class="bottom">By: Tim Hansson Meng<a href="https://github.com/Slipzter" target="_blank">
       <i class="devicon-github-original"></i>
     </a></div>
     <div class="modal hidden">
